crates/sui-prover/tests/snapshots/scenario/scenario_abort.fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
expression: output
---
exiting with verification errors
error: code should not abort
   ┌─ tests/inputs/scenario/scenario_abort.fail.move:16:1
   │
16 │ }
   │ ^
   │
   =     at tests/inputs/scenario/scenario_abort.fail.move:11: scenario
